<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="instruction">Instruction</string>
    <string name="next">Next</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="welcome_description">Welcome to the ShoesStore, here you can manage your shoes and in the future who knows, you\'ll can sell your shoes.</string>
    <string name="name_format">Name: %s</string>
    <string name="company_format">Company: %s</string>
    <string name="size_format_presentation">Size: %.1f</string>
    <string name="size_format">%.2f</string>
    <string name="logout">Logout</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="enter_company">Enter company</string>
    <string name="size">Size</string>
    <string name="enter_size">Enter size</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
